Add model and Change Anything

--- a/app/src/main/res/layout/itinerary_plan_card.xml
+++ b/app/src/main/res/layout/itinerary_plan_card.xml
@@ -29,6 +29,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <ImageButton
+            android:id="@+id/DeletePlanButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/DeletePlan"
+            android:src="@drawable/ic_cross"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <TextView
             android:id="@+id/DateOfPlan"
             style="@style/Text"
