--- a/app/src/main/res/layout/activity_mapsstart.xml
+++ b/app/src/main/res/layout/activity_mapsstart.xml
@@ -49,10 +49,11 @@
                 android:id="@+id/currentLocationButton"
                 android:drawableLeft="@drawable/ic_map"
                 android:drawableTint="@color/lightBlue"
-                android:background="@drawable/selector_button_bg"
+                android:background="@drawable/button_circle"
                 android:minWidth="0dp"
                 android:minHeight="0dp"
-                android:paddingLeft="25dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="5dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="15dp"
