--- a/app/src/main/res/layout/plan_detail_card.xml
+++ b/app/src/main/res/layout/plan_detail_card.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
->
+    >
 
     <!-- เส้นแนวตั้งทางด้านซ้าย -->
     <LinearLayout
         android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:layout_marginLeft="10dp"
         android:orientation="vertical"
         android:gravity="center">
@@ -25,9 +25,8 @@
         <!-- เส้นแนวตั้ง -->
         <View
             android:id="@+id/line"
-            android:layout_width="3dp"
+            android:layout_width="5dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="4dp"
             android:background="@color/darkBlue"/>
     </LinearLayout>
 
@@ -47,11 +46,11 @@
             android:text="SEA LIFE Bangkok" />
 
         <TextView
-            android:id="@+id/address"
+            android:id="@+id/time"
             style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Floor B1 Siam Paragon" />
+            android:text="14.00 - 16.00" />
 
     </LinearLayout>
 </LinearLayout>
